--- a/README
+++ b/README
@@ -1,5 +1,10 @@
 ##todo deploy.sh
-1. export FLASK_ENV=dev
+1. export FLASK_ENV=dev/dev/prod
+2. python database_conf_gen.py
+3. commit changes
+4. push
+
+
 2. *pipenv shell
 3. python database_conf_gen.py
 5. docker-compose down
