--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 ##todo deploy.sh
+Flask, Parameter Store, CloudWatch, S3, Jenkins, Makefile, Docker, API
+
 1. export FLASK_ENV= dev or docker  or prod
 2. python deploy.py
 
